src/tests/testfiles/binary-operators/types-11.txt
Error at 2:9: Comparison operator operands need to be of same type (have char rvalue and int rvalue)
'a' < 1;
    ^
